Ensure the images are "c_fill" cropped - and ensure the CSS uses the correct sizes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,7 +107,7 @@ code {
 }
 
 .carousel-item img {
-  height: 400px;
+  height: 300px;
   width: 500px;
 }
 
